--- a/animals.html
+++ b/animals.html
@@ -67,7 +67,7 @@
     <body>
         <h1>My Animal Repository</h1>
         <ul class="cards">
-            <li class="cards__item"><div class="card__title">Chicken</div><p class="card__text"><strong>Diet: </strong>Omnivore<br/><strong>Location: </strong>Africa<br/><strong>Type: </strong>Bird<br/><li class="cards__item"><div class="card__title">Chicken Snake</div><p class="card__text"><strong>Diet: </strong>Carnivore<br/><strong>Location: </strong>Central-America<br/><br/><li class="cards__item"><div class="card__title">Silkie Chicken</div><p class="card__text"><strong>Diet: </strong>Omnivore<br/><strong>Location: </strong>Asia<br/><strong>Type: </strong>bird<br/>
+            <li class="cards__item"><div class="card__title">Guinea Pig</div><p class="card__text"><strong>Diet: </strong>Herbivore<br/><strong>Location: </strong>South-America<br/><br/><li class="cards__item"><div class="card__title">Nicobar pigeon</div><p class="card__text"><strong>Diet: </strong>Omnivore<br/><strong>Location: </strong>Asia<br/><strong>Type: </strong>Bird<br/><li class="cards__item"><div class="card__title">Pig</div><p class="card__text"><strong>Diet: </strong>Omnivore<br/><strong>Location: </strong>Asia<br/><strong>Type: </strong>Mammal<br/><li class="cards__item"><div class="card__title">Pigeon</div><p class="card__text"><strong>Diet: </strong>Omnivore<br/><strong>Location: </strong>Africa<br/><strong>Type: </strong>Bird<br/>
         </ul>
     </body>
 </html>
